change Class.newInstance() to Class.getDeclaredConstructor().newInstance() for Deprecated by java 9